--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -11,6 +11,6 @@
         <div id="app">
 
         </div>
-        <script src="./demo.js"></script>
+        <script src="demo.js"></script>
     </body>
 </html>
